fix: link color contrast
https://web.dev/color-contrast/

--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -18,7 +18,7 @@
 --pagination-bg-color: #373737;
 --pagination-link-color: #b6b6b6;
 
---post-info-color: grey;
+--post-info-color: #adadad;
 
 --switcher-color: #333;
 --switcher-bg-color: #fff;
