--- a/assets/css/light.css
+++ b/assets/css/light.css
@@ -19,7 +19,7 @@
     --pagination-bg-color: #fafafa;
     --pagination-link-color: #696969;
 
-    --post-info-color: grey;
+    --post-info-color: #595959;
 
     --switcher-color: #fff;
     --switcher-bg-color: #333; 
